--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -20,11 +20,17 @@ $color-gray: #808080;
 $border-radius: 10rem;
 
 // Grid
-$grid-width: 90rem;
+$grid-width: 85rem;
+$grid-width__nav: 60rem;
 $grid-width__projects: 180rem;
+
 
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+$gutter-vertical-nav: 8rem;
+$gutter-horizontal-nav: 1rem;
+
 
 
 // Font size
