--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -39,6 +39,55 @@
     
 }
 
+.row-nav {
+    max-width: $grid-width;
+    margin: 0 auto;
+    
+    @media only screen and (min-width: 600px) and (max-width: 767px) { 
+
+    }
+
+    @media only screen and (max-width: 600px) {
+        max-width: $grid-width__nav;
+    }
+    
+
+    &:not(:last-child) {
+        margin-bottom: $gutter-vertical-nav;
+    }
+
+    @include clearfix;
+
+    [class^="col-"] {
+        
+        float: left;
+        text-align: center;
+
+        &:not(:last-child) {
+            margin-right: $gutter-horizontal-nav;
+        }
+    }
+
+    .col-1-of-2 {
+        width: calc((100% - #{$gutter-horizontal-nav}) / 2);
+        
+    }
+
+    .col-1-of-3 {
+        width: calc((100% - 2 * #{$gutter-horizontal-nav}) / 3);
+    }
+
+    .col-2-of-3 {
+        width: calc(2 * ((100% - 2 * #{$gutter-horizontal-nav}) / 3) + #{$gutter-horizontal-nav});
+    }
+
+    .col-1-of-4 {
+        width: calc((100% - 3 * #{$gutter-horizontal-nav}) / 4);
+    }
+
+    
+}
+
 .row-projects {
     max-width: $grid-width__projects;
 
